# jsyn

./: Cargo.toml  README  flake.nix
examples/: sine.janet  sine.rs
src/: lib.rs  net.rs  play.rs
